# Grid-Based-Home-Detection

./: .gitignore  README.md  data.gpx  pyproject.toml
docs/source/: conf.py  index.rst
examples/: README.md  config.yaml  example_batch.py  example_detect_batch.py  example_detect_single.py  example_plot.py  example_plot_batch.py  example_plot_single.py  example_run.py  example_validate.py  example_validate_batch.py  example_validate_single.py  home_detection_result.html  home_detection_result_data.html
ghost/: __init__.py  cli.py  config.py  detector.py  plot.py  utils.py
ghost/algorithms/: __init__.py  grid.py
ghost/io/: __init__.py  gpx.py
ghost/preprocessing/: __init__.py  projection.py  time.py
ghost/validation/: __init__.py  groundtruth.py  metrics.py
homegrid/: __init__.py  cli.py  config.py  detector.py  plot.py  utils.py
homegrid/algorithms/: __init__.py  grid.py
homegrid/io/: __init__.py  gpx.py
homegrid/preprocessing/: __init__.py  projection.py  time.py
homegrid/validation/: __init__.py  groundtruth.py
tests/algorithms/: test_grid.py
tests/cli/: test_cli.py
tests/config/: test_config.py
tests/io/: test_gpx.py
tests/plot/: test_plot.py
tests/preprocessing/: test_projection.py  test_time.py
tests/validation/: test_groundtruth.py  test_metrics.py
