[project]
name = "grid-based-home-detection"
version = "0.1.0"
description = "Modular Python package for detecting home locations from mobile GPS data using grid-based algorithms. Inspired by OSMnx."
authors = [
    { name = "Mustafa Sameen", email = "mustafasameen@ufl.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3",
    "gpxpy>=1.5",
    "pytest>=7.0",
    "matplotlib>=3.5",
    "typer>=0.9"
]

[project.optional-dependencies]
interactive = [
    "folium>=0.14",
    "contextily>=1.3"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "--maxfail=1 --disable-warnings"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 